--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="shortcut icon" href="img/favicon.png">
     <link type="text/css" rel="stylesheet" href="style.css">
 
-<!--Le style qui été présent ici à été mis au propre dans une feuille de style-->
+<!--Le style qui était présent ici à été mis au propre dans une feuille de style-->
 
 </head>
 
